# hpp2cythonparser

./: .gitignore  CHANGELOG  README.md  __init__.py  api.py  cppheaderparser.py  hpp_parser.py  hpp_parser.pyi  pyproject.toml
example/: example.py
internals/: c_types.py  core.py  data_types.py  print_headers.py  tools.py
src/hpp2cythonparser/: __init__.py  __main__.py  _c_types.py  api.py  api.pyi  cppheaderparser.py  hpp_parser.py  struct.py  trait.py
src/hpp2cythonparser/_internals/: core.py  ctype_parsing.py  file_parsing.py  print_headers.py  tools.py
src/hpp2cythonparser/example/: example.py
src/hpp2cythonparser/internals/: c_types.py  core.py  data_types.py  print_headers.py
