[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hpp2cythonparser"
version = "0.1.0"
description = "parses c++ headers and create a cython header with importable functions"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "License"}
keywords = ["c++", "python"]
authors = [
  {name = "Will Zhang", email = "willwz@umich.edu"}
]
maintainers = [
  {name = "Will Zhang", email = "willwz@umich.edu"}
]
classifiers = [
  "Development Status :: 0 - Alpha",
  "Programming Language :: Python",
]
dependencies = []

[project.scripts]
hpp2cython = "hpp2cythonparser.cppheaderparser:main"

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
