[project]
name = "hpp2cythonparser"
version = "0.1.0"
description = "For converting cpp headers to cython headers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Will Zhang", email = "willwz@umich.edu" }]
maintainers = [{ name = "Will Zhang", email = "willwz@umich.edu" }]
classifiers = [
  "Development Status :: 0 - Alpha",
  "Programming Language :: Python",
]
keywords = [
  "cython", "cpp"
]
dependencies = [
  "arraystubs@git+https://github.com/willwiz/arraystubs",
  "pytools@git+https://github.com/willwiz/pytools",
]
